# sp1-aggregation-service

./: .env.example  Cargo.toml  README.md
contracts/: foundry.toml
contracts/deployments/: 11155111.json
contracts/script/: SP1AggregationVerifier.s.sol
contracts/src/: SP1AggregationVerifier.sol
elf/: riscv32im-succinct-zkvm-elf
program/: Cargo.toml
program/src/: main.rs
programs/aggregation-program/: Cargo.toml
programs/aggregation-program/elf/: riscv32im-succinct-zkvm-elf
programs/fibonacci-program/: Cargo.toml
programs/fibonacci-program/elf/: riscv32im-succinct-zkvm-elf
proto/: aggregation.proto
rpc/: Cargo.toml  aggregationdb.sqlite
rpc/migrations/: 20241206190624_aggregation.sql  20241209232623_update_requests_table.sql
rpc/src/: aggregation_service.rs  db.rs  lib.rs  main.rs  relay.rs  tests.rs
script/: Cargo.toml
script/src/: main.rs
types/: Cargo.toml  build.rs
types/src/: aggregation.rs  lib.rs  merkle_tree.rs
