[workspace]
members = [
    "lib", "programs/aggregation-program",
    "programs/fibonacci-program",
    "rpc",
    "script",
    "types",
]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "0.8.0"
alloy-provider = "0.8.0"
alloy-network = "0.8.0"
alloy-signer-local = "0.8.0"
alloy-rpc-types-eth = "0.8.0"
alloy-contract = "0.8.0"

types = { path = "types" }
rpc = { path = "rpc" }
sp1-sdk = "3.0.0"
sp1-build = "3.0.0"
serde = "1.0"
serde_json = "1.0"
