[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite"] }
dotenv = "0.15.0"
eyre = "0.6.10"
tokio = { version = "1.39.0", features = ["full"] }
tonic = "0.12.0"
rand = "0.8.5"
types = { workspace = true }
chrono = "0.4.38"
sha2 = "0.10.6"
sp1-sdk = "3.4.0"
serde = "1.0.188"
serde_json = "1.0.100"
