[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres"] }
dotenv = "0.15.0"
eyre = "0.6.10"
tokio = { version = "1.39.0", features = ["full"] }
tonic = "0.12.0"
rand = "0.8.5"
types = { workspace = true }
chrono = "0.4.38"
sha2 = "0.10.6"
bincode = "1.3.3"
alloy-sol-types = { workspace = true }
alloy-contract = { workspace = true }
alloy-provider = { workspace = true }
alloy-network = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
clap = "4.0.0"
sp1-sdk = { workspace = true }
serde = "1.0.188"
serde_json = "1.0.100"
tracing = "0.1"

