[package]
name = "script"
version = "0.1.0"
edition = "2021"
default-run = "script"

[dependencies]
sp1-sdk = { workspace = true }
rpc = { workspace = true }
types = { workspace = true }
dotenv = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = "1.30"
chrono = "0.4"

[[bin]]
name = "script"
path = "src/main.rs"

[[bin]]
name = "generate-compressed"
path = "bin/generate_compressed.rs"

[build-dependencies]
sp1-build = { workspace = true }