[package]
name = "script"
version = "0.1.0"
edition = "2021"
default-run = "script"

[dependencies]
sp1-sdk = "3.0.0"
rpc = { workspace = true }
types = { workspace = true }
dotenv = "0.15"
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3.3"
tokio = "1.30"
chrono = "0.4"

[[bin]]
name = "script"
path = "src/main.rs"

[[bin]]
name = "generate-compressed"
path = "bin/generate_compressed.rs"

[[bin]]
name = "aggregation-client"
path = "bin/aggregation_client_sdk.rs"

[build-dependencies]
sp1-build = { workspace = true }